[package]
name = "rust-web-server-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Simon Osaka <geniusmickymouse@qq.com>"]
include = ["src/**/*", "Cargo.toml", "README.md"]
description = "A example of rust wasm"
repository = "https://github.com/SimonOsaka/rust-web-server-wasm"
documentation = ""
homepage = ""
keywords = ["wasm"]
categories = []
license = "MIT"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasmer = "2.1"

[profile.dev]
lto = false
opt-level = 0
overflow-checks = true
incremental = true

[profile.release]
lto = "thin"
opt-level = 'z'
overflow-checks = false
incremental = false
